# yeying-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.toml
infra/: Dockerfile
infra/scripts/: init_weaviate_jd.py
rag/: __init__.py  runner.py
rag/api/: __init__.py  deps.py  main.py
rag/api/routers/: health.py  kb.py  memory.py  query.py
rag/application/data_storage/: __init__.py
rag/application/generation/: __init__.py
rag/application/memory/: __init__.py  service.py
rag/config/: config.py
rag/configs/: __init__.py
rag/core/: pipeline.py  rerank.py  retriever_jd.py  schemas.py  summarizer.py
rag/datasource/: base.py
rag/datasource/connections/: common.py  minio_connection.py  sqlite_connection.py  weaviate_connection.py
rag/datasource/objectstores/: minio_store.py
rag/datasource/sqlstores/: __init__.py  mem_contexts_store.py  mem_deleted_store.py  mem_primary_store.py  mem_registry_store.py  uploaded_jd_store.py
rag/datasource/vectorstores/: weaviate_store.py
rag/domain/: models.py
rag/domain/memory/: repository.py
rag/infrastructure/database/: instance.py
rag/interfaces/: __init__.py  memory_server.py
rag/llm/embeddings/: openai_embedding.py
rag/memory/: auxiliary_memory.py  memory_manager.py  primary_memory.py
rag/utils/: logging.py  text_splitter.py
rag/workers/: ingest_worker.py  jd_worker.py  resume_state.py
run/data/: rag.db
script/: generate.sh
scripts/: functions.sh  generate_proto.sh  runner.sh  stop.sh
tests/datasource/: minio_client_test.py  weaviate_client_test.py
(+21 files in other folders)
