[project]
name = "yeying-rag"
version = "0.1.0"
description = "Minimal RAG MVP with health check"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "minio>=7.2.5",
  "weaviate-client>=4.6.0,<5.0.0",
]

[tool.uvicorn]
factory = false
port = 8000
log-level = "info"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*"]
exclude = ["tests*", "docs*", "infra*", "logs*"]
